test(media): enhance FileSystemRepositoryTest and MediaServiceUnitTest with additional cases and assertions